[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/guide_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/ui/dialogs/bg_construire.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/close.png" type="Texture" id=3]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/historical_message.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/historical.gd" type="Script" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1282, 635 )

[node name="Historical" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 22.0
margin_top = 30.0
margin_right = 1005.0
margin_bottom = 582.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 983.0
margin_bottom = 58.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
text = "Historique"
align = 1
valign = 1

[node name="ScrollMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 983.0
margin_bottom = 552.0
mouse_filter = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ScrollMargin"]
margin_right = 983.0
margin_bottom = 490.0
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="message_container" type="VBoxContainer" parent="VBoxContainer/ScrollMargin/ScrollContainer"]
margin_right = 983.0
size_flags_horizontal = 3

[node name="historical_message" parent="VBoxContainer/ScrollMargin/ScrollContainer/message_container" instance=ExtResource( 5 )]
visible = false
margin_right = 375.0

[node name="exit_button" type="TextureButton" parent="."]
margin_left = 900.483
margin_top = 4.4949
margin_right = 995.483
margin_bottom = 102.495
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
